# ai-reviewer

./: .gitignore  LICENSE  README.md  api.py  config.example.yaml  pyproject.toml  requirements.txt
.github/actions/ai-reviewer-action/: index.js
.github/workflows/: ai-review.yml  ci.yml
src/: __init__.py
src/api/routes/: __init__.py  webhook.py
src/core/: __init__.py  config.py  engine.py
src/llm/: factory.py  types.py
src/llm/client/: base.py  deepseek.py  minimax.py  openai.py  qwen.py  zhipu.py
src/outputs/: __init__.py  dingtalk.py  feishu.py  github.py  wecom.py
src/reviewers/: __init__.py  base.py
src/reviewers/code/: __init__.py  reviewer.py
src/reviewers/fix/: __init__.py  reviewer.py
src/reviewers/security/: __init__.py  reviewer.py
src/triggers/: __init__.py  gitea.py  gitlab.py
src/utils/: log.py  token_util.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_reviewers.py
